
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed error with charset reference in setup/
- Clear Search in Package Browser when clicking on a Tag 
- Added Search bar to Package Browser, now can search entire repository
- Fixed height of Package Browser to not go too far down screen
- Fixed modRestSockClient to properly strip HTTP headers and return only XML
- Added modStaticResource methods: getSourceFile() and getSourceFileSize()
- Fixed bug in setup/ script with new transport package fields
- Fixed modCacheManager to not cache reg* calls that will cause breakage on similar calls to reg* method
- Added 'package_name' and 'metadata' fields to modTransportPackage for future development
- Fixed styling commits; also fixed bug on Package Management when not selecting default provider
- Added help buttons to Resource pages
- Moved TV categories in Resource edit page to tabpanel, also cleaned up button styling
- Fixed table styling. This is temporary until all tables are ported to ext grids. This affects welcome pane, system info, and online users.
- Fixed bug where package browser would close on ESC key
- [#MODX-1489] Allow spaces in Category names
- [#MODX-1497] Fixed username not being sent in new user email
- Fixed NOT NULL error in modManagerLog
- Revamped Package Management UI, changed Provider hooks to REST-based, massively improved downloading UI
- Fixed styling on the search page.
- Fixed styling on the actions page.
- Fixed styling on the manager logs page.
- Fixed triggerfields in windows in Safari
- Changed the text-size and and top margin of the Main Navbar Submenu span for more readability.
- [#MODX-1426] Added connect check to assist with mysql_get_server_info in setup